--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
 install:
   pip install -r requirements.txt
 script:
-  - pytest tests/
-success:
+  - pytest --cov=project/ tests/
+after_success:
   - codecov
 notifications:
   email: false
